--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,19 @@
                 </div>
             </div>
 
-            <div class="image-container" id="imageContainer">
-                <!-- 图片将在这里显示 -->
-                <div class="no-images">
-                    <i class="fas fa-cloud-sun fa-2x"></i>
-                    <p>请上传图片数据</p>
+            <div class="image-display-area">
+                <div class="image-container" id="imageContainer">
+                    <!-- 图片将在这里显示 -->
+                    <div class="no-images">
+                        <i class="fas fa-cloud-sun fa-2x"></i>
+                        <p>请上传图片数据</p>
+                    </div>
+                </div>
+                
+                <div class="image-time-info">
+                    <div class="image-time-overlay" id="imageTimeOverlay">
+                        <i class="far fa-clock"></i> 2023-01-01 01:00:00
+                    </div>
                 </div>
             </div>
 
