--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>气象数据可视化</title>
+    <title>应龙气象</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1><i class="fas fa-cloud-sun"></i> 气象数据可视化</h1>
+            <h1><i class="fas fa-cloud-sun"></i> 应龙气象</h1>
             <div class="header-controls">
                 <div class="time-display">
                     <i class="fas fa-clock"></i>
@@ -136,7 +136,7 @@
                                     <i class="fas fa-images"></i>
                                     <p>暂无数据</p>
                                     <button class="upload-action-btn" id="upload-action-btn">
-                                        <i class="fas fa-upload"></i> 上传图片
+                                        <i class="fas fa-upload"></i> 上传数据
                                     </button>
                                 </div>
                             </div>
